.antlr/picalculusParser.java
// Generated from /mnt/Files/Unal_asignaturas/Len_progra2021-1/Ant-LR/ProyectoLen/picalculus.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class picalculusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Cap=2, Can=3, Var=4, Iff=5, Dot=6, Then=7, Eq=8, Neq=9, Pd=10, 
		Hat=11, Tao=12, Spam=13, Con=14, Plus=15, Crech=16, Par=17, Ws=18, Com=19, 
		Bcom=20;
	public static final int
		RULE_prog = 0, RULE_stmt = 1, RULE_write = 2, RULE_read = 3, RULE_process_op = 4, 
		RULE_create_ch = 5, RULE_if_cond = 6, RULE_process_invoc = 7, RULE_parameters = 8, 
		RULE_process_decl = 9, RULE_oper = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stmt", "write", "read", "process_op", "create_ch", "if_cond", 
			"process_invoc", "parameters", "process_decl", "oper"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", null, null, null, "'if'", "'.'", "'then'", "'=='", "'!='", 
			"'::='", "'~'", "'^'", "'!'", "'|'", "'+'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "Cap", "Can", "Var", "Iff", "Dot", "Then", "Eq", "Neq", "Pd", 
			"Hat", "Tao", "Spam", "Con", "Plus", "Crech", "Par", "Ws", "Com", "Bcom"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "picalculus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	String s = "";
	public picalculusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode EOF() { return getToken(picalculusParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			stmt();
			setState(23);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Process_opContext process_op() {
			return getRuleContext(Process_opContext.class,0);
		}
		public Process_invocContext process_invoc() {
			return getRuleContext(Process_invocContext.class,0);
		}
		public Process_declContext process_decl() {
			return getRuleContext(Process_declContext.class,0);
		}
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(29);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				process_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(26);
				process_invoc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(27);
				process_decl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(28);
				oper();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public TerminalNode Hat() { return getToken(picalculusParser.Hat, 0); }
		public TerminalNode Var() { return getToken(picalculusParser.Var, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(Can);
			setState(32);
			match(Hat);
			setState(33);
			match(Var);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public TerminalNode Var() { return getToken(picalculusParser.Var, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(Can);
			setState(36);
			match(Par);
			setState(37);
			match(Var);
			setState(38);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_opContext extends ParserRuleContext {
		public List<TerminalNode> Cap() { return getTokens(picalculusParser.Cap); }
		public TerminalNode Cap(int i) {
			return getToken(picalculusParser.Cap, i);
		}
		public TerminalNode Con() { return getToken(picalculusParser.Con, 0); }
		public TerminalNode Plus() { return getToken(picalculusParser.Plus, 0); }
		public Process_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_op; }
	}

	public final Process_opContext process_op() throws RecognitionException {
		Process_opContext _localctx = new Process_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_process_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(Cap);
			setState(41);
			_la = _input.LA(1);
			if ( !(_la==Con || _la==Plus) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(42);
			match(Cap);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_chContext extends ParserRuleContext {
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public TerminalNode Crech() { return getToken(picalculusParser.Crech, 0); }
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public Create_chContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_ch; }
	}

	public final Create_chContext create_ch() throws RecognitionException {
		Create_chContext _localctx = new Create_chContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_ch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(Par);
			setState(45);
			match(Crech);
			setState(46);
			match(Can);
			setState(47);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_condContext extends ParserRuleContext {
		public TerminalNode Iff() { return getToken(picalculusParser.Iff, 0); }
		public List<TerminalNode> Var() { return getTokens(picalculusParser.Var); }
		public TerminalNode Var(int i) {
			return getToken(picalculusParser.Var, i);
		}
		public TerminalNode Then() { return getToken(picalculusParser.Then, 0); }
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public TerminalNode Eq() { return getToken(picalculusParser.Eq, 0); }
		public TerminalNode Neq() { return getToken(picalculusParser.Neq, 0); }
		public If_condContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_cond; }
	}

	public final If_condContext if_cond() throws RecognitionException {
		If_condContext _localctx = new If_condContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(Iff);
			setState(50);
			match(Var);
			setState(51);
			_la = _input.LA(1);
			if ( !(_la==Eq || _la==Neq) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(52);
			match(Var);
			setState(53);
			match(Then);
			setState(54);
			oper();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_invocContext extends ParserRuleContext {
		public TerminalNode Cap() { return getToken(picalculusParser.Cap, 0); }
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Process_invocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_invoc; }
	}

	public final Process_invocContext process_invoc() throws RecognitionException {
		Process_invocContext _localctx = new Process_invocContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_process_invoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(Cap);
			setState(57);
			match(Par);
			setState(58);
			parameters();
			setState(59);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public List<TerminalNode> Can() { return getTokens(picalculusParser.Can); }
		public TerminalNode Can(int i) {
			return getToken(picalculusParser.Can, i);
		}
		public List<TerminalNode> Var() { return getTokens(picalculusParser.Var); }
		public TerminalNode Var(int i) {
			return getToken(picalculusParser.Var, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(Par);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Can || _la==Var) {
				{
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(62);
					match(Can);
					setState(63);
					match(T__0);
					}
					break;
				case 2:
					{
					setState(64);
					match(Var);
					setState(65);
					match(T__0);
					}
					break;
				case 3:
					{
					setState(66);
					match(Can);
					}
					break;
				case 4:
					{
					setState(67);
					match(Var);
					}
					break;
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_declContext extends ParserRuleContext {
		public List<TerminalNode> Cap() { return getTokens(picalculusParser.Cap); }
		public TerminalNode Cap(int i) {
			return getToken(picalculusParser.Cap, i);
		}
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode Pd() { return getToken(picalculusParser.Pd, 0); }
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public Process_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_decl; }
	}

	public final Process_declContext process_decl() throws RecognitionException {
		Process_declContext _localctx = new Process_declContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_process_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(Cap);
			setState(76);
			match(Par);
			setState(77);
			parameters();
			setState(78);
			match(Par);
			setState(79);
			match(Pd);
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Cap:
				{
				setState(80);
				match(Cap);
				}
				break;
			case Can:
			case Iff:
			case Tao:
			case Spam:
			case Par:
				{
				setState(81);
				oper();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperContext extends ParserRuleContext {
		public TerminalNode Dot() { return getToken(picalculusParser.Dot, 0); }
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public If_condContext if_cond() {
			return getRuleContext(If_condContext.class,0);
		}
		public Create_chContext create_ch() {
			return getRuleContext(Create_chContext.class,0);
		}
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public TerminalNode Spam() { return getToken(picalculusParser.Spam, 0); }
		public TerminalNode Tao() { return getToken(picalculusParser.Tao, 0); }
		public OperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oper; }
	}

	public final OperContext oper() throws RecognitionException {
		OperContext _localctx = new OperContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_oper);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Can:
			case Iff:
			case Spam:
			case Par:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(84);
					match(Par);
					}
					break;
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Spam) {
					{
					setState(87);
					match(Spam);
					}
				}

				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(90);
					write();
					}
					break;
				case 2:
					{
					setState(91);
					read();
					}
					break;
				case 3:
					{
					setState(92);
					if_cond();
					}
					break;
				case 4:
					{
					setState(93);
					create_ch();
					}
					break;
				}
				setState(96);
				match(Dot);
				setState(97);
				oper();
				setState(99);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(98);
					match(Par);
					}
					break;
				}
				}
				break;
			case Tao:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(Tao);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}